Handlebars upgrade to version 4.4.0