@@ -89,10 +89,8 @@
     <sakai.genericdao.version>0.12.0</sakai.genericdao.version>
     <reflectutils.version>0.9.20</reflectutils.version>
     <json.simple.version>1.1.1</json.simple.version>
-    <handlebars1.version>1.3.2</handlebars1.version>
     <handlebars2.version>2.3.2</handlebars2.version>
-    <!-- This is held back to 4.0.6 because the webjars and jknack diverge and can't upgrade to jknack because of https://github.com/jknack/handlebars.java/issues/911 -->
-    <handlebars4.version>4.0.6</handlebars4.version>
+    <handlebars4.version>4.4.0</handlebars4.version>
     <hamcrest.all.version>1.3</hamcrest.all.version>
     <junit.version>4.13.2</junit.version>
     <sakai.nimbus.jose.jwt.version>9.37.2</sakai.nimbus.jose.jwt.version>
@@ -2907,29 +2905,29 @@
           <target>${sakai.jdk.version}</target>
           <forceJavacCompilerUse>true</forceJavacCompilerUse>
           <compilerArgs>
-            <arg>--add-opens=java.base/java.io=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/java.math=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/java.net=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/java.nio=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/java.text=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/java.time=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/jdk.internal.access=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.base/sun.util.calendar=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.management/sun.management=ALL-UNNAMED</arg>
-            <arg>--add-opens=java.sql/java.sql=ALL-UNNAMED</arg>
-            <arg>--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</arg>
-            <arg>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/java.io=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/java.lang.invoke=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/java.lang.reflect=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/java.lang=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/java.math=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/java.net=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/java.nio=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/java.text=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/java.time=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/java.util.concurrent.atomic=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/java.util.concurrent.locks=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/java.util.concurrent=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/java.util=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/jdk.internal.access=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/sun.util.calendar=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.management/sun.management=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.sql/java.sql=ALL-UNNAMED</arg>
+            <arg>--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</arg>
+            <arg>--add-exports=jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
           </compilerArgs>
         </configuration>
       </plugin>
